# zmq_client_server_test_work

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build.sh
client/: CMakeLists.txt  Client.cpp  Client.h  Subscriber.cpp  Subscriber.h  SubscriberZMQ.cpp  SubscriberZMQ.h  main.cpp  src.cmake
common/: Holder.h  types.h
cppjson/: CMakeLists.txt  json.h
cppjson/json/: json_inline.h  value.h  value_inline.h
logsystem/: CMakeLists.txt  LogSystem.cpp  LogSystem.h  Logger.h  SimpleLogger.h
message/: CMakeLists.txt  Message.h  MessageProvider.h  MessageProviderJson.cpp  MessageProviderJson.h
server/: CMakeLists.txt  Server.cpp  Server.h  ServerZMQ.cpp  ServerZMQ.h  UUID.h  UUIDBoost.cpp  UUIDBoost.h  depConfig.cmake  main.cpp  src.cmake
timer/: CMakeLists.txt  Timer.h  TimerBoost.cpp  TimerBoost.h
zmqhelpers/: zmqhelpers.h
