PROJECT(client_project)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(LIB_DIR 
    "${CMAKE_CURRENT_SOURCE_DIR}/.."
    )

SET(dep_DIR ${CMAKE_CURRENT_SOURCE_DIR} )

FIND_PACKAGE(Qt4 REQUIRED)

FIND_PACKAGE(dep REQUIRED)

IF(NOT DEP_FOUND)
    MESSAGE(FATAL_ERROR "Dependencies not found")
ENDIF(NOT DEP_FOUND)

INCLUDE(src.cmake)

QT4_WRAP_CPP(client_HEADERS_MOC ${client_QTHEADERS})
INCLUDE(${QT_USE_FILE})

ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_EXECUTABLE(client ${client_SOURCES} ${client_HEADERS_MOC} ${client_HEADERS})

INCLUDE_DIRECTORIES("${LIB_DIR}/common")

INCLUDE_DIRECTORIES("${LIB_DIR}/zmqhelpers")

INCLUDE_DIRECTORIES("${LIB_DIR}/message")
ADD_SUBDIRECTORY(${LIB_DIR}/message message)

INCLUDE_DIRECTORIES("${LIB_DIR}/timer")
ADD_SUBDIRECTORY(${LIB_DIR}/timer timer)

INCLUDE_DIRECTORIES("${LIB_DIR}/logsystem")
ADD_SUBDIRECTORY(${LIB_DIR}/logsystem logsystem)

INCLUDE_DIRECTORIES(${ZEROMQ_INCLUDE_DIR})
LINK_DIRECTORIES(${ZEROMQ_LIBRARY})

SET(EXTRA_LIBS ${EXTRA_LIBS} logsystem message timer ${QT_LIBRARIES} ${ZEROMQ_LIBRARY})

TARGET_LINK_LIBRARIES(client ${EXTRA_LIBS})
